--- a/Android/OrtalamaHesapla/app/src/main/res/layout/yeni_ders_layout.xml
+++ b/Android/OrtalamaHesapla/app/src/main/res/layout/yeni_ders_layout.xml
@@ -13,8 +13,9 @@
             android:layout_height="39dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
+            android:textColor="@android:color/white"
             android:layout_marginTop="16dp"
-            android:text="AutoCompleteTextView"
+            android:backgroundTint="@color/colorAccent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btnYeniDersSil"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,8 @@
             android:layout_height="36dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="12dp"
+            android:popupBackground="@color/colorAccent"
+            android:backgroundTint="@color/colorAccent"
             android:layout_marginTop="16dp"
             android:entries="@array/krediler"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -37,6 +40,8 @@
             android:layout_width="115dp"
             android:layout_height="39dp"
             android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/colorAccent"
+            android:popupBackground="@color/colorAccent"
             android:layout_marginStart="4dp"
             android:entries="@array/tumNotlar"
             app:layout_constraintBottom_toBottomOf="@+id/spnYeniDersKredi"
@@ -47,15 +52,25 @@
 
     <Button
         android:id="@+id/btnYeniDersSil"
-        android:layout_width="89dp"
-        android:layout_height="74dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:text="SİL"
+        android:background="@drawable/sub_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/etYeniDersAd"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorAccent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spnYeniDersKredi" />
     </android.support.constraint.ConstraintLayout>
