--- a/Android/BurcRehberi/app/src/main/res/layout/activity_detay.xml
+++ b/Android/BurcRehberi/app/src/main/res/layout/activity_detay.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
+
             app:expandedTitleMarginStart="100dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
@@ -62,6 +62,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="16sp"
+
                 android:id="@+id/tvBurcOzellikleri"/>
         </LinearLayout>
 
