--- a/Android/BurcRehberi/app/src/main/res/layout/activity_main.xml
+++ b/Android/BurcRehberi/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
 
     <ListView
         android:id="@+id/listBurclar"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:entries="@array/burclar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
